# llama2-terminal

./: .gitignore  LICENSE  LlamaBase.py  MANIFEST.in  NOTICE  README.md  main.py  pyproject.toml  requierements.txt  requirements.txt  setup.py  test.py
llama2-terminal/wrapper/: CmdLogUtils.py  CommandLineReader.py  config.py  main.py  wrapper.py
llama2terminal/: __main__.py
llama2terminal/base/: agents.py  config.yaml  prompts.py  test.py
llama2terminal/base/agents/: addons.py  agents.py  build.py  templates.py
llama2terminal/base/prompts/: generation.py  templates.py
llama2terminal/config/: config.yaml  settings.py  sysutils.py  welcomeLauncher.py
llama2terminal/wrapper/: IOUtils.py  colors.py  config.py  history.py  io.py  main.py  params.yaml  terminal.py  utils.py
